Introduces serialized samples generation profile