@@ -627,6 +627,51 @@
             </build>
         </profile>
 
+        <profile>
+            <!-- same as default build (excludes Nightly & Slow tests), outputs serialized objects to a blob -->
+            <!-- for compatibility testing -->
+            <id>generate-compatibility-samples</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <configuration combine.self="override">
+                            <properties>
+                                <property>
+                                    <name>listener</name>
+                                    <value>com.hazelcast.test.compatibility.SamplingRunListener</value>
+                                </property>
+                            </properties>
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                            <runOrder>failedfirst</runOrder>
+                            <argLine>
+                                -Xms1g -Xmx1g -XX:MaxPermSize=1024M
+                                -Dhazelcast.hidensity.check.freememory=false
+                                -Dhazelcast.phone.home.enabled=false
+                                -Dhazelcast.mancenter.enabled=false
+                                -Dhazelcast.tomcat.shutdown_hazelcast_instance=false
+                                -Dhazelcast.test.sample.serialized.objects=${target.dir}/serialized-objects-ee-${project.version}-
+                                ${extraVmArgs}
+                            </argLine>
+                            <excludedGroups>
+                                com.hazelcast.test.annotation.NightlyTest,com.hazelcast.test.annotation.SlowTest,
+                                com.hazelcast.test.annotation.CompatibilityTest
+                            </excludedGroups>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>com.github.jerrinot.maven-surefire</groupId>
+                                <artifactId>maven-surefire-common</artifactId>
+                                <version>${maven.surefire.plugin.version}-buffered</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
     </profiles>
 
     <dependencies>
